fix: Fix FJD alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@ body {
 header {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   border: 2px solid black;
   width: 90%;
   margin: 0 auto; 
